--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,127 @@
 * {
     box-sizing: border-box;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 .container {
     display: grid;
-    grid-template-columns: 250px 1fr;
-    grid-template-rows: 50px 150px 1fr;
+    grid-template-columns: 300px 1fr;
+    grid-template-rows: 3rem 100px 1fr;
 }
 
 .header {
-    background-color: aquamarine;
+    background-color: white;
     grid-row: 1 / span 1;
     grid-column: 2 / span 1;
+    padding: 1rem;
+
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.headerleft {
+    display: grid;
+    grid-template-columns: 2rem 1fr;
+    padding-right: 10px;
+}
+
+.searchbar {
+    background-color: rgb(184, 204, 224);
+    border-radius: 0.75rem;
+    height: 1.5rem;
+}
+
+.headerright {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: right;
 }
 
 .welcome {
-    background-color: blueviolet;
+    background-color: white;
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
+    padding: 1rem;
 }
 
 .dashboard {
-    background-color: #e9e0e0;
+    background-color: rgb(184, 204, 224);
     grid-row: 3 / span 1;
     grid-column: 2 / span 1;
+    padding: 1rem;
+
+    display: grid;
+    grid-template-columns: 1fr 300px;
+
 }
 
 .nav {
-    background-color: coral;
+    height: 100vh;
+    padding: 1rem;
+    background-color: rgb(63, 89, 241);
+    color: whitesmoke;
     grid-row: 1 / span 3;
     grid-column: 1 / span 1;
+    font-weight: bold;
+
+    display: grid;
+    grid-template-rows: 150px 1fr 1fr;
+}
+
+.nav .menuitem {
+    padding-bottom: 1rem;
+}
+
+.section-title,
+.project-section-title {
+    font-weight: bold;
+}
+
+.projects {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 1;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1rem 1fr;
+    grid-auto-rows: 1fr;
+    gap: 25px;
+
+}
+
+.project-section-title {
+    grid-row: 1 / span 1;
+    grid-column: 1 / span 2;
+}
+
+.projectcard {
+    background-color: white;
+    width: 100%;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 2px 2px 3px #888888;
+    border-left: 10px solid rgb(253, 194, 43);
+}
+
+.highlights {
+    grid-column: 2 / span 1;
+    padding: 0 20px;
+
+    display: grid;
+    grid-template-rows: 1rem 1fr 1rem 1fr;
+    gap: 20px;
+}
+
+.announcements {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 2px 2px 3px #888888;
+}
+
+.trending {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 2px 2px 3px #888888;
 }
