--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
     grid-column: 2 / span 1;
     padding: 1rem;
 
+
     display:grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -42,6 +43,7 @@
     grid-row: 2 / span 1;
     grid-column: 2 / span 1;
     padding: 1rem;
+    border-bottom: 4px solid #88888884;
 }
 
 .dashboard {
