--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,11 @@
     border-left: 10px solid rgb(253, 194, 43);
 }
 
+.project-title {
+    font-weight: bold;
+    font-size: 1.25em;
+}
+
 .highlights {
     grid-column: 2 / span 1;
     padding: 0 20px;
