--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(93deg) brightness(103%) contrast(103%);
 }
 
+.filter-orange {
+    filter: invert(76%) sepia(21%) saturate(1664%) hue-rotate(331deg) brightness(99%) contrast(95%);
+}
+
 .icon-crop {
     width: 50px;
     height: 50px;
@@ -197,6 +201,11 @@
 .iconset img {
     padding: 0 .75rem;
     height: 1.5rem;
+}
+
+.iconset img:hover {
+    transform: scale(175%);
+    filter: invert(76%) sepia(21%) saturate(1664%) hue-rotate(331deg) brightness(99%) contrast(95%); 
 }
 
 .highlights {
