--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@
 
 .container {
     display: grid;
-    grid-template-columns: 400px 1fr;
-    grid-template-rows: 100px 150px 1fr;
+    grid-template-columns: 250px 1fr;
+    grid-template-rows: 75px 100px 1fr;
 }
 
 .header {
@@ -101,12 +101,12 @@
     padding: 1rem;
 
     display: grid;
-    grid-template-columns: 1fr 500px;
+    grid-template-columns: 1fr 300px;
 
 }
 
 .nav {
-    height: 100vh;  /*not sure why this doesn't go 100% when the grid overflows*/
+    height: 100%;  /*not sure why 100vh doesn't go 100% when the grid overflows*/
     padding: 1rem;
     background-color: rgb(63, 89, 241);
     color: whitesmoke;
@@ -158,9 +158,9 @@
 
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1rem 1fr;
+    grid-template-rows: 1rem;
     grid-auto-rows: 1fr;
-    gap: 25px;
+    gap: 15px;
 }
 
 .project-section-title {
